qt/multimedia/gen_qsound.h

class QEvent;
class QMetaObject;
class QObject;
class QSound;
class QTimerEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QSound QSound;
typedef struct QTimerEvent QTimerEvent;
QSound* QSound_new(struct miqt_string filename);
QSound* QSound_new2(struct miqt_string filename, QObject* parent);
QMetaObject* QSound_metaObject(const QSound* self);
void* QSound_metacast(QSound* self, const char* param1);
int QSound_metacall(QSound* self, int param1, int param2, void** param3);
struct miqt_string QSound_tr(const char* s);
struct miqt_string QSound_trUtf8(const char* s);
void QSound_play(struct miqt_string filename);
int QSound_loops(const QSound* self);
int QSound_loopsRemaining(const QSound* self);
void QSound_setLoops(QSound* self, int loops);
struct miqt_string QSound_fileName(const QSound* self);
bool QSound_isFinished(const QSound* self);
void QSound_play2(QSound* self);
void QSound_stop(QSound* self);
struct miqt_string QSound_tr2(const char* s, const char* c);
struct miqt_string QSound_tr3(const char* s, const char* c, int n);
struct miqt_string QSound_trUtf82(const char* s, const char* c);
struct miqt_string QSound_trUtf83(const char* s, const char* c, int n);
bool QSound_override_virtual_metacall(void* self, intptr_t slot);
int QSound_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QSound_override_virtual_event(void* self, intptr_t slot);
bool QSound_virtualbase_event(void* self, QEvent* event);
bool QSound_override_virtual_eventFilter(void* self, intptr_t slot);
bool QSound_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QSound_override_virtual_timerEvent(void* self, intptr_t slot);
void QSound_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QSound_override_virtual_childEvent(void* self, intptr_t slot);
void QSound_virtualbase_childEvent(void* self, QChildEvent* event);
bool QSound_override_virtual_customEvent(void* self, intptr_t slot);
void QSound_virtualbase_customEvent(void* self, QEvent* event);
bool QSound_override_virtual_connectNotify(void* self, intptr_t slot);
void QSound_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QSound_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QSound_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QSound_delete(QSound* self);